# ai-wall-visualizer

./: .env.example  .gitignore  DEPLOY.md  HETZNER.md  README.md  SECURITY.md  deploy-to-hetzner.bat  docker-compose.bootstrap.yml  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.yml  ral_test.csv
backend/: Dockerfile  Dockerfile.worker  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_sales_features.py  003_leads_group.py  004_in_stock.py  005_store_catalog.py  006_platform_admin.py  007_project_telegram_bot_id.py  008_brand_packaging.py  009_brand_paint_finish.py  010_project_editor_mode.py  011_store_broadcasts.py  012_store_crew_chat.py  013_store_brands_decor_packs.py  014_store_discounts.py  015_store_brand_pack_prices.py  016_store_business_hours.py  017_brand_color_code_system.py  018_color_palettes.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  assets.py  auth.py  catalog.py  deps.py  internal.py  leads.py  platform.py  projects.py
backend/app/bot/: main.py  registry.py
backend/app/models/: __init__.py
backend/app/ops/: main.py
backend/app/schemas/: __init__.py
backend/app/services/: bot_tokens.py  brand_ops.py  broadcast.py  catalog_ops.py  cleanup_runner.py  color_codes.py  date_filter.py  decor_estimate_db.py  file_validation.py  jwt.py  lead_notify.py  material_ops.py  notifications.py  ops_collector.py  ops_notify.py  paint_estimate.py  paint_estimate_db.py  palette_ops.py  pricing.py  pricing_bulk.py  queue_monitor.py  webapp.py  (+10 more)
(+43 files in other folders)
