[project]
name = "ai-wall-visualizer"
version = "0.1.0"
description = "Telegram Bot + Mini App for AI wall visualization"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.17",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "aiogram>=3.15.0",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "pillow>=11.0.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.5",
    "fpdf2>=2.8.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.46.0",
    "mobile-sam @ git+https://github.com/ChaoningZhang/MobileSAM.git",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
